# elph-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  KNOWN_ISSUES.md  Makefile  NOTICE.md  README.md  install.sh  rust-2026-exploration.md  rust-toolchain.toml
crates/agent/: Cargo.toml  README.md
crates/agent/src/: bundled.rs  lib.rs  paths.rs  settings.rs  trust.rs  version.rs
crates/agent/tests/: smoke.rs
crates/ai/: Cargo.toml  README.md
crates/claw-agent/: Cargo.toml  README.md
crates/claw-agent/src/: app.rs  main.rs
crates/claw-agent/tests/: cli.rs  smoke.rs
crates/coding-agent/: Cargo.toml  README.md
crates/coding-agent/src/: app.rs  exit_message.rs  interrupt.rs  keyboard_enhancement.rs  main.rs  signal_interrupt.rs
crates/coding-agent/tests/: cli.rs
crates/elph-agent/: Cargo.toml  README.md
crates/elph-agent/docs/: agent-harness.md  durable-harness.md  hooks.md  mcp.md  observability.md  prompt-encoding.md  skills.md  tools.md
crates/elph-agent/examples/: agent_coding_tools.rs  agent_coding_workflow.rs  agent_collaboration.rs  agent_compaction.rs  agent_compaction_full.rs  agent_events.rs  agent_filesystem_tools.rs  agent_goals.rs  agent_harness.rs  agent_hooks.rs  agent_init.rs  agent_list_tools.rs  agent_mcp_config.rs  agent_messages.rs  agent_multi_turn.rs  agent_search_tools.rs  agent_session.rs  agent_skill_math.rs  agent_skills.rs  agent_steering.rs  agent_subagent.rs  agent_tools.rs  agent_web_tools.rs  basic_agent.rs  default_mcp_deepwiki.rs  default_no_tools.rs  default_tool_call.rs  encrypt_string.rs  faux_agent.rs  mcp_deepwiki.rs  opencode_big_pickle.rs  toon_mcp_deepwiki.rs  toon_no_tools.rs  toon_tool_call.rs
crates/elph-agent/src/: builder.rs  lib.rs  migration.rs
crates/elph-agent/templates/: base.md
crates/elph-agent/tests/: agent.rs  agent_loop.rs  compaction.rs  defaults.rs  e2e.rs  encrypt_string.rs  env.rs  goals.rs  harness.rs  harness_stream.rs  mcp_deepwiki.rs  messages.rs  plan_mode.rs  plugins.rs  prompt.rs  prompt_encoding.rs  prompt_template.rs  repo.rs  resource_formatting.rs  serde_roundtrip.rs  session.rs  session_kalid.rs  session_tsid.rs  session_uuid.rs  skills.rs  storage.rs  subagent.rs  system_prompt.rs  tools_fff.rs  tracing_http.rs  truncate.rs  web_tools.rs
crates/elph-ai/: Cargo.toml  README.md
crates/elph-ai/examples/: auth_custom.rs  basic.rs  browse_models.rs  custom_provider.rs  images.rs  opencode_big_pickle.rs  streaming.rs  tool_loop.rs
crates/elph-ai/models/: amazon_bedrock.json  ant_ling.json  anthropic.json  azure_openai_responses.json  cerebras.json  cloudflare_ai_gateway.json  cloudflare_workers_ai.json  deepseek.json  fireworks.json  github_copilot.json  google.json  google_vertex.json  groq.json  huggingface.json  hyper.json  index.json  kimi_coding.json  minimax.json  minimax_cn.json  mistral.json  moonshotai.json  moonshotai_cn.json  nvidia.json  openai.json  openai_codex.json  opencode.json  opencode_go.json  openrouter.json  together.json  vercel_ai_gateway.json  xai.json  xiaomi.json  xiaomi_token_plan_ams.json  xiaomi_token_plan_cn.json  xiaomi_token_plan_sgp.json  zai.json  zai_coding_cn.json
crates/elph-ai/src/: lib.rs  session_resources.rs  trace.rs
crates/elph-ai/tests/: abort.rs  anthropic_empty_thinking_signature.rs  anthropic_sse_parsing.rs  anthropic_temperature.rs  anthropic_thinking.rs  bedrock_convert_messages.rs  bedrock_custom_headers.rs  bedrock_endpoint_resolution.rs  bedrock_thinking_payload.rs  cache_retention.rs  codex_websocket.rs  cross_provider_handoff_live.rs  error_body.rs  faux_provider.rs  github_copilot_headers.rs  google_shared_gemini3.rs  google_shared_thinking.rs  http_proxy.rs  images_models.rs  mistral_reasoning_mode.rs  mistral_tool_schema.rs  oauth_auth.rs  openai_completions_cache_control_format.rs  openai_completions_developer_role.rs  openai_completions_empty_tools.rs  openai_completions_thinking_as_text.rs  openai_completions_tool_choice.rs  openai_completions_tool_result_images.rs  openai_prompt_cache.rs  openai_responses_convert.rs  openai_responses_empty_tool_result.rs  openai_responses_partial_json.rs  openai_responses_terminal_event.rs  openrouter_cache_write_live.rs  openrouter_images.rs  providers.rs  smoke.rs  sse_abort.rs  stream_without_api_key.rs  tool_call_id_normalization_live.rs  (+2 more)
crates/elph-core/: Cargo.toml  README.md
crates/elph-core/src/: fs.rs  lib.rs
crates/elph-core/tests/: tracing_integration.rs
crates/elph-exec/: Cargo.toml
crates/elph-exec/src/: error.rs  lib.rs  output.rs  shell.rs  types.rs
crates/elph-exec/tests/: shell.rs
crates/elph-sandbox/: Cargo.toml  README.md
crates/elph-swarm/: Cargo.toml
crates/elph-tui/: Cargo.toml  README.md
crates/elph-tui/examples/: basic_context.rs  basic_counter.rs  basic_form.rs  basic_input.rs  basic_layout.rs  basic_output.rs  basic_overlap.rs  basic_scrolling.rs  basic_table.rs  calculator.rs  chat_layout.rs  demo_code.rs  demo_dialog_choices.rs  demo_dialog_shell.rs  demo_diff.rs  demo_input.rs  demo_loading_indicator.rs  demo_markdown.rs  demo_progress_indicator.rs  demo_scroll.rs  demo_select.rs  demo_special.rs  demo_theme.rs  (+3 more)
crates/tui/: Cargo.toml  README.md
eclaw/: Cargo.toml  Cross.toml  README.md
eclaw/src/: main.rs
elph/: Cargo.toml  Cross.toml  README.md
elph/src/: app.rs  lib.rs  main.rs  tui.rs  types.rs
elph/tests/: cli.rs
owly/: Cargo.toml  Cross.toml  README.md
owly/scripts/: e2e_cli.sh
owly/src/: agent.rs  checkpoint.rs  cli.rs  commands.rs  config.rs  constants.rs  credentials.rs  diagnostics.rs  docs.rs  ecosystem.rs  env.rs  frontmatter.rs  lib.rs  main.rs  metadata.rs  onboarding.rs  prompts.rs  session.rs  startup.rs  ui_events.rs  utils.rs
owly/tests/: agent_test.rs  checkpoint_test.rs  cli_e2e_test.rs  config_test.rs  constants_test.rs  credentials_test.rs  docs_test.rs  env_ext_test.rs  env_test.rs  frontmatter_ext_test.rs  fs_errors_test.rs  metadata_ext_test.rs  metadata_test.rs  onboarding_test.rs  prompts_test.rs  redaction_ext_test.rs  redaction_test.rs  session_name_test.rs  tui_transcript_test.rs  utils_test.rs
(+1030 files in other folders)
