[workspace]
resolver = "2"
members = ["crates/elph-*", "eclaw", "elph", "owly"]

[workspace.package]
homepage = "https://elph.space"
repository = "https://github.com/riipandi/elph"
rust-version = "1.96"
edition = "2024"

[workspace.dependencies]
# Planned — not yet wired into crates:
# agent-client-protocol = "1.0.1"
# git2 = { version = "0.21.0", features = ["cred", "https", "ssh"] }
# jsonschema = "=0.46.10"
# rmcp = { version = "2.1.0", features = ["auth", "client"] }
# ropey = { version = "1.6.1", features = ["metric_lines_lf_cr", "simd"] }
# rustc-hash = { version = "2.1.3", features = ["rand", "std"] }
anyhow = "1.0.103"
axum = { version = "0.8.8", default-features = false, features = ["http1", "json", "matched-path", "tokio"] }
clap = { version = "4.5", default-features = false, features = [
  "color",
  "derive",
  "error-context",
  "help",
  "std",
  "usage",
] }
crokey = "1.4.0"
crossterm = { version = "0.29", default-features = false, features = ["bracketed-paste", "events"] }
elph-agent = { path = "crates/elph-agent", version = "0.0.22" }
elph-ai = { path = "crates/elph-ai", version = "0.0.22" }
elph-core = { path = "crates/elph-core", version = "0.0.10" }
elph-tui = { path = "crates/elph-tui", version = "0.0.22" }
fff-search = "0.9.6"
indicatif = { version = "0.18.6", default-features = false, features = ["unicode-width"] }
iocraft = "0.8.3"
libc = "0.2"
pulldown-cmark = { version = "0.13", default-features = false, features = ["simd"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.150", default-features = false, features = ["std"] }
similar = { version = "3.1.1", features = ["inline", "unicode"] }
time = { version = "0.3", default-features = false, features = ["formatting", "parsing", "std"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
tower-http = { version = "0.7.0", default-features = false, features = ["catch-panic"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "json", "std"] }
tsid = "0.3.4"
turso = { version = "0.6.1", default-features = false }

[profile.release]
opt-level = 2 # Optimization level: 2 = balanced runtime perf vs compile time
lto = "thin" # Thin LTO: cross-crate inlining without full-program analysis cost
codegen-units = 16 # Parallel codegen: 16 units = faster compile, minimal optimization loss
panic = "abort" # panic=abort: removes unwind tables — smaller binary, cannot catch panics
strip = "symbols" # Strip all symbols from final binary
debug = false # No debug symbols in release

[profile.dev]
incremental = true # Incremental: rebuild only changed code — much faster iteration
debug = "limited" # Limited debug info: line numbers only, no type/variable debug
