[workspace]
resolver = "2"
members = ["crates/elph-*", "eclaw", "elph", "owly"]

[workspace.package]
homepage = "https://elph.space"
repository = "https://github.com/riipandi/elph"
rust-version = "1.96"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.103"
aws-config = "1.9.0"
aws-sdk-bedrockruntime = "1.136.0"
aws-smithy-runtime-api = "1.13.0"
aws-smithy-types = "1.6.1"
axum = { version = "0.8.9", default-features = false, features = ["http1", "json", "matched-path", "tokio"] }
base64 = "0.22.1"
bytes = "1.12.1"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4.6.1", default-features = false, features = [
  "color",
  "derive",
  "error-context",
  "help",
  "std",
  "usage",
] }
crossbeam-channel = "0.5.16"
crossterm = { version = "0.28.1", default-features = false, features = ["bracketed-paste", "events"] }
obscura = { version = "0.1" }
dialoguer = "0.12.0"
dirs = "6.0.0"
elph-agent = { path = "crates/elph-agent", version = "0.0.27" }
elph-ai = { path = "crates/elph-ai", version = "0.0.26" }
elph-core = { path = "crates/elph-core", version = "0.0.15" }
elph-tui = { path = "crates/elph-tui", version = "0.0.26" }
eventsource-stream = "0.2.3"
fastembed = { version = "5.17.2" }
fff-search = "0.9.6"
futures = "0.3.32"
futures-util = "0.3.32"
http = "1.4.2"
ignore = "0.4.27"
image = "0.25.10"
indicatif = { version = "0.18.6", default-features = false, features = ["unicode-width"] }
jsonschema = "0.47.0"
libc = "0.2.186"
memchr = "2.8.3"
memorable-ids = "0.1.1"
parking_lot = "0.12"
pulldown-cmark = { version = "0.13.4", default-features = false, features = ["simd"] }
rand = "0.10.2"
rayon = "1.12.0"
regex = "1.12.4"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "stream"] }
rust-embed = { version = "8.12.0" }
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std", "tls12"] }
schemars = "1.2.1"
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.150", default-features = false, features = ["std"] }
serde_yaml = "0.9.33"
sha2 = "0.11.0"
similar = { version = "3.1.1", features = ["inline", "unicode"] }
similar-asserts = "2.0.0"
superlighttui = { version = "0.22.2", features = ["async"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
time = { version = "0.3.53", default-features = false, features = ["formatting", "parsing", "std"] }
tokio = { version = "1.52.3", default-features = false, features = ["macros", "rt"] }
tokio-rustls = "0.26.4"
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tokio-util = "0.7.18"
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.7.0", default-features = false, features = ["catch-panic"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["env-filter", "fmt", "json", "std"] }
tsid = "0.3.4"
turso = { version = "0.6.1", default-features = false }
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"
url = "2.5.8"
urlencoding = "2.1.3"
walkdir = "2.5.0"
webpki-roots = "1.0.8"
yaml-front-matter = "0.1.0"
zstd = "0.13.3"

# Planned — not yet wired into crates:
# agent-client-protocol = "1.0.1"
# git2 = { version = "0.21.0", features = ["cred", "https", "ssh"] }
# rmcp = { version = "2.1.0", features = ["auth", "client"] }
# ropey = { version = "1.6.1", features = ["metric_lines_lf_cr", "simd"] }
# rustc-hash = { version = "2.1.3", features = ["rand", "std"] }

[profile.release]
opt-level = 2 # Optimization level: 2 = balanced runtime perf vs compile time
lto = "thin" # Thin LTO: cross-crate inlining without full-program analysis cost
codegen-units = 16 # Parallel codegen: 16 units = faster compile, minimal optimization loss
panic = "abort" # panic=abort: removes unwind tables — smaller binary, cannot catch panics
strip = "symbols" # Strip all symbols from final binary
debug = false # No debug symbols in release

[profile.dev]
incremental = true # Incremental: rebuild only changed code — much faster iteration
debug = "limited" # Limited debug info: line numbers only, no type/variable debug

[patch.crates-io]
obscura = { git = "https://github.com/h4ckf0r0day/obscura", tag = "v0.1.9" }
