[workspace]
resolver = "2"
members = ["crates/elph-*", "elph"]
exclude = ["extensions/say-hello"]

[workspace.package]
homepage = "https://elph.space"
repository = "https://github.com/riipandi/elph"
rust-version = "1.97"
edition = "2024"

[workspace.lints.rust]
linker_messages = "allow"

[workspace.dependencies]
aes-gcm = "0.11.0"
agent-client-protocol = "1.2"
anstyle = "1.0.14"
anstyle-syntect = "1.0.5"
anyhow = "1.0.103"
aws-config = "1.9.0"
aws-sdk-bedrockruntime = "1.136.0"
aws-smithy-runtime-api = "1.13.0"
aws-smithy-types = "1.6.1"
axum = { version = "0.8.9", default-features = false, features = ["http1", "json", "matched-path", "tokio"] }
base64 = "0.22.1"
bytes = "1.12.1"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4.6.2", features = ["derive", "usage"] }
clap_complete = "4.6.7"
crossbeam-channel = "0.5.16"
crossterm = { version = "0.29.0", default-features = false, features = ["bracketed-paste", "events"] }
elph-agent = { path = "crates/elph-agent", version = "0.0.28" }
elph-ai = { path = "crates/elph-ai", version = "0.0.27" }
elph-core = { path = "crates/elph-core", version = "0.0.16" }
elph-exec = { path = "crates/elph-exec", version = "0.0.1" }
elph-tui = { path = "crates/elph-tui", version = "0.0.26" }
embed_anything = { version = "0.7.1", default-features = true }
eventsource-stream = "0.2.3"
fastrace = "0.7.18"
fastrace-reqwest = "0.3.0"
fff-search = "0.10.0"
figlet-rs = "1.0.0"
futures = "0.3.32"
futures-util = "0.3.32"
git2 = { version = "0.21.0", features = ["cred"] }
htmd = "0.5.4"
html-escape = "0.2.14"
http = "1.4.2"
httpmock = "0.8.3"
ignore = "0.4.29"
image = "0.25.10"
iocraft = "0.8.4"
jsonschema = "0.48.0"
kalid = "0.1.0"
libc = "0.2.186"
linkify = "0.11.0"
log = "0.4.33"
logforth = { version = "0.30.1", features = [
  "append-async",
  "append-fastrace",
  "append-file",
  "diagnostic-fastrace",
  "filter-rustlog",
  "layout-json",
  "layout-text",
  "starter-log",
] }
memchr = "2.8.3"
memorable-ids = "0.1.1"
minijinja = "2.10.2"
obscura = { version = "0.1" }
parking_lot = "0.12"
pulldown-cmark = { version = "0.13.4", default-features = false, features = ["simd"] }
qrcode = "0.14.1"
rand = "0.10.2"
rayon = "1.12.0"
regex = "1.13.1"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "stream"] }
rmcp = { version = "2.2.0", features = [
  "auth",
  "client",
  "transport-child-process",
  "transport-streamable-http-client",
  "transport-streamable-http-client-reqwest",
  "reqwest",
] }
rustc-hash = { version = "2.1.3", features = ["std"] }
rustix = { version = "1", features = ["pty", "termios", "process", "fs"] }
rustls = { version = "0.23.42", default-features = false, features = ["ring", "std", "tls12"] }
schemars = "1.2.1"
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.150", default-features = false, features = ["std"] }
serde_yaml = "0.9.33"
sha2 = "0.11.0"
similar = { version = "3.1.1", features = ["inline", "unicode"] }
similar-asserts = "2.0.0"
supports-color = "3.0.2"
syntect = { version = "5.2", default-features = false, features = [
  "default-syntaxes",
  "default-themes",
  "plist-load",
  "regex-fancy",
] }
tempfile = "3.27.0"
textwrap = "0.16.2"
thiserror = "2.0.18"
time = { version = "0.3.53", default-features = false, features = ["formatting", "parsing", "std"] }
tokio = { version = "1.52.3", default-features = false, features = ["macros", "rt"] }
tokio-rustls = "0.26.4"
tokio-tungstenite = { version = "0.30.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tokio-util = "0.7.18"
toml = "1.1.2"
toon-format = { version = "0.5.0", default-features = false }
turso = { version = "0.7.0", default-features = false }
two-face = "0.5.1"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"
url = "2.5.8"
urlencoding = "2.1.3"
walkdir = "2.5.0"
wasmtime = { version = "46.0.1", default-features = false, features = ["component-model", "async", "cranelift", "std"] }
webpki-roots = "1.0.8"
zstd = "0.13.3"

[profile.release]
opt-level = 2 # Optimization level: 2 = balanced runtime perf vs compile time
lto = "thin" # Thin LTO: cross-crate inlining without full-program analysis cost
codegen-units = 16 # Parallel codegen: 16 units = faster compile, minimal optimization loss
panic = "abort" # panic=abort: removes unwind tables — smaller binary, cannot catch panics
strip = "symbols" # Strip all symbols from final binary
debug = false # No debug symbols in release

[profile.dev]
incremental = true # Incremental: rebuild only changed code — much faster iteration
debug = "limited" # Limited debug info: line numbers only, no type/variable debug

[patch.crates-io]
# Bracketed multiline paste (`TerminalEvent::Paste`) — not in iocraft 0.8.4 on crates.io.
iocraft = { path = "vendor/iocraft" }
obscura = { git = "https://github.com/h4ckf0r0day/obscura", tag = "v0.1.9" }
