[package]
name = "eclaw"
version = "0.0.12"
license = "MIT"
description = "Personal AI assistant powered by Elph"
homepage = "https://elph.space"
repository = "https://github.com/riipandi/elph"
keywords = ["ai", "assistant", "cli", "elph", "personal"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.96"
edition = "2024"
publish = true

[[bin]]
name = "eclaw"
path = "src/main.rs"

[features]
default = ["web"]
headless = []
web = ["dep:rust-embed"]

[dependencies]
axum.workspace = true
clap.workspace = true
elph-agent.workspace = true
rust-embed = { version = "8.9.0", optional = true }
serde_json.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["net", "rt-multi-thread", "signal", "time"] }
tower-http.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
tower = { version = "0.5.2", features = ["util"] }
