[package]
name = "eclaw"
version = "0.0.20"
license = "MIT"
description = "Personal AI assistant powered by Elph"
keywords = ["ai", "assistant", "cli", "elph", "personal"]
categories = ["command-line-utilities", "development-tools"]
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = true

[[bin]]
name = "eclaw"
path = "src/main.rs"

[features]
default = ["web"]
headless = []
web = ["dep:rust-embed"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
elph-agent.workspace = true
elph-ai.workspace = true
elph-core.workspace = true
rust-embed = { version = "8.9.0", optional = true }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tower-http.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
tower = { version = "0.5.2", features = ["util"] }
