[package]
name = "elph"
version = "0.0.24"
license = "MIT"
description = "Minimalist AI agent companion for coding"
keywords = ["ai", "agent", "cli", "coding", "llm"]
categories = ["command-line-utilities", "development-tools"]
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = true

[[bin]]
name = "elph"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
elph-agent.workspace = true
elph-ai.workspace = true
elph-core = { workspace = true, features = ["fastembed"] }
elph-tui.workspace = true
iocraft.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
tracing.workspace = true
tsid.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
