[package]
name = "elph"
version = "0.0.27"
license = "Apache-2.0"
description = "Minimalist AI agent companion for coding"
keywords = ["ai", "agent", "cli", "coding", "llm"]
categories = ["command-line-utilities", "development-tools"]
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = true

[lib]
name = "elph"
path = "src/lib.rs"

[[bin]]
name = "elph"
path = "src/main.rs"

[dependencies]
agent-client-protocol.workspace = true
anyhow.workspace = true
chord_macro = "0.1"
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
crossterm.workspace = true
elph-agent = { workspace = true, features = ["tracing", "builtin-tools"] }
elph-ai = { workspace = true, features = ["tracing"] }
elph-core = { workspace = true, features = ["embed", "git", "tracing"] }
elph-tui = { workspace = true }
futures-util.workspace = true
iocraft.workspace = true
log.workspace = true
parking_lot.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
tokio-util = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
elph-agent = { workspace = true, features = ["builtin-tools"] }
elph-core.workspace = true
libc.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[lints.rust]
linker_messages = "allow"
