[package]
name = "owly"
version = "0.0.1"
license = "MIT"
description = "Agent docs for codebases - Rust port of OpenWiki"
keywords = ["ai", "documentation", "wiki", "agent", "cli"]
categories = ["development-tools", "command-line-utilities"]
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "owly"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
clap = { workspace = true, features = ["env"] }
elph-agent.workspace = true
elph-ai.workspace = true
indicatif.workspace = true
regex = "1"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time", "fs", "io-util"] }
tracing-subscriber.workspace = true
tracing.workspace = true
walkdir = "2"
yaml-front-matter = "0.1"

[dev-dependencies]
tempfile = "3"
