[package]
name = "owly"
version = "0.0.5"
license = "MIT"
description = "AI agent CLI that writes and maintains documentation for your codebase"
keywords = ["ai", "documentation", "wiki", "agent", "cli"]
categories = ["development-tools", "command-line-utilities"]
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = true

[[bin]]
name = "owly"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["env"] }
elph-agent.workspace = true
elph-ai.workspace = true
elph-tui.workspace = true
iocraft.workspace = true
indicatif.workspace = true
memchr.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time", "fs", "io-util"] }
tracing-subscriber.workspace = true
tracing.workspace = true
walkdir.workspace = true
yaml-front-matter.workspace = true
turso.workspace = true
dirs.workspace = true
dialoguer.workspace = true

[dev-dependencies]
tempfile.workspace = true
