[package]
name = "elph-agent"
version = "0.0.10"
license = "MIT"
description = "Agent runtime for Elph coding assistant"
homepage = "https://elph.space"
repository = "https://github.com/riipandi/elph"
keywords = ["agent", "runtime", "ai", "coding", "elph"]
categories = ["development-tools", "asynchronous"]
authors = ["Aris Ripandi <aris@duck.com>"]
rust-version = "1.96"
edition = "2024"
publish = true

[lib]
name = "elph_agent"
path = "src/lib.rs"

[dependencies]
chrono.workspace = true
elph-ai = { path = "../ai", version = "^0.0.10" }
indicatif.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
turso = "0.6.1"

[dev-dependencies]
tempfile = "3.27.0"
