[package]
name = "elph-ai"
version = "0.0.8"
license = "MIT"
description = "AI provider integration for Elph agent"
homepage = "https://elph.space"
repository = "https://github.com/riipandi/elph"
keywords = ["ai", "llm", "provider", "api", "elph"]
categories = ["api-bindings", "development-tools"]
authors = ["Aris Ripandi <aris@duck.com>"]
rust-version = "1.96"
edition = "2024"
publish = true

[lib]
name = "elph_ai"
path = "src/lib.rs"
