[package]
name = "elph-coding-agent"
version = "0.0.2"
license = "MIT"
description = "Minimalist AI agent companion for coding"
repository = "https://github.com/riipandi/elph"
authors = ["Aris Ripandi <aris@duck.com>"]
rust-version = "1.96"
edition = "2024"
publish = true

[[bin]]
name = "elph"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
nix.workspace = true
smol.workspace = true
iocraft.workspace = true
elph-agent.workspace = true
elph-tui.workspace = true
