[package]
name = "elph"
version = "0.0.6"
license = "MIT"
description = "Minimalist AI agent companion for coding"
repository = "https://github.com/riipandi/elph"
authors = ["Aris Ripandi <aris@duck.com>"]
rust-version = "1.96"
edition = "2024"
publish = true

[[bin]]
name = "elph"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
elph-agent.workspace = true
elph-tui.workspace = true
iocraft.workspace = true
nix.workspace = true
smol.workspace = true
clap = { version = "4.5", features = ["derive"] }
