[package]
name = "elph"
version = "0.0.7"
license = "MIT"
description = "Minimalist AI agent companion for coding"
repository = "https://github.com/riipandi/elph"
authors = ["Aris Ripandi <aris@duck.com>"]
rust-version = "1.96"
edition = "2024"
publish = true

[[bin]]
name = "elph"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
cuid2.workspace = true
elph-agent.workspace = true
elph-tui.workspace = true
iocraft.workspace = true
nix.workspace = true
signal-hook.workspace = true
smol.workspace = true
