[package]
name = "elph-agent"
version = "0.0.27"
license = "MIT"
description = "Agent runtime for Elph coding assistant"
keywords = ["agent", "runtime", "ai", "coding", "elph"]
categories = ["development-tools", "asynchronous"]
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = true

[lib]
name = "elph_agent"
path = "src/lib.rs"

[features]
default = ["mcp"]
mcp = ["dep:rmcp"]
obscura = ["dep:obscura"]
# obscura is git-only (h4ckf0r0day/obscura); workspace [patch.crates-io] redirects 0.1 → tag v0.1.9.

[dependencies]
anyhow.workspace = true
bytes.workspace = true
crossbeam-channel.workspace = true
elph-ai.workspace = true
elph-core.workspace = true
fff-search.workspace = true
futures.workspace = true
ignore.workspace = true
indicatif.workspace = true
obscura = { workspace = true, optional = true }
parking_lot.workspace = true
regex.workspace = true
reqwest.workspace = true
rmcp = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
time.workspace = true
tokio = { workspace = true, features = [
  "fs",
  "macros",
  "net",
  "process",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-util = { workspace = true, features = ["rt"] }
tracing.workspace = true
tsid.workspace = true
turso.workspace = true
url.workspace = true
urlencoding.workspace = true
walkdir.workspace = true

[[example]]
name = "faux_agent"
path = "examples/faux_agent.rs"

[[example]]
name = "basic_agent"
path = "examples/basic_agent.rs"

[[example]]
name = "agent_tools"
path = "examples/agent_tools.rs"

[[example]]
name = "agent_events"
path = "examples/agent_events.rs"

[[example]]
name = "agent_session"
path = "examples/agent_session.rs"

[[example]]
name = "agent_harness"
path = "examples/agent_harness.rs"

[[example]]
name = "agent_coding_tools"
path = "examples/agent_coding_tools.rs"

[[example]]
name = "agent_web_tools"
path = "examples/agent_web_tools.rs"

[[example]]
name = "agent_multi_turn"
path = "examples/agent_multi_turn.rs"

[[example]]
name = "agent_hooks"
path = "examples/agent_hooks.rs"

[[example]]
name = "agent_steering"
path = "examples/agent_steering.rs"

[[example]]
name = "agent_compaction"
path = "examples/agent_compaction.rs"

[[example]]
name = "agent_coding_workflow"
path = "examples/agent_coding_workflow.rs"

[[example]]
name = "agent_skills"
path = "examples/agent_skills.rs"

[[example]]
name = "agent_skill_math"
path = "examples/agent_skill_math.rs"

[dev-dependencies]
elph-ai = { workspace = true }
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tsid.workspace = true
