[package]
name = "elph-agent"
version = "0.0.28"
license = "MIT"
description = "App-agnostic agent runtime for AI applications"
keywords = ["agent", "runtime", "ai", "elph"]
categories = ["development-tools", "asynchronous"]
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = true

[lib]
name = "elph_agent"
path = "src/lib.rs"

[features]
default = []
full = ["mcp", "prompt-templates", "extensions", "builtin-tools"]
builtin-tools = ["tools-edit", "tools-search", "tools-web", "tools-collaboration"]
extensions = ["dep:wasmtime", "dep:walkdir"]
mcp = ["dep:rmcp"]
prompt-templates = ["dep:minijinja"]

obscura = ["dep:obscura"]
tools-collaboration = []
tools-copy-path = []
tools-create-dir = []
tools-delete-path = []
tools-edit-file = []
tools-edit = [
  "tools-edit-file",
  "tools-write-file",
  "tools-shell-exec",
  "tools-create-dir",
  "tools-copy-path",
  "tools-delete-path",
  "tools-move-path",
]
tools-shell-exec = []
tools-find-path = ["dep:fff-search"]
tools-grep = ["dep:fff-search"]
tools-list-dir = ["dep:walkdir"]
tools-move-path = []
tools-read-file = []
tools-search = ["tools-read-file", "tools-grep", "tools-find-path", "tools-list-dir"]
tools-web = []
tools-write-file = []
tracing = ["dep:fastrace", "dep:fastrace-reqwest", "fastrace/enable", "elph-ai/tracing", "elph-core/tracing"]
# obscura is git-only (h4ckf0r0day/obscura); workspace [patch.crates-io] redirects 0.1 → tag v0.1.9.

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
async-trait = "0.1"
base64.workspace = true
bytes.workspace = true
crossbeam-channel.workspace = true
elph-ai.workspace = true
elph-core = { workspace = true, default-features = true }
elph-exec.workspace = true
elph-tui.workspace = true
fastrace = { workspace = true, optional = true }
fastrace-reqwest = { workspace = true, optional = true }
fff-search = { workspace = true, optional = true }
futures.workspace = true
htmd.workspace = true
http.workspace = true
ignore.workspace = true
jsonschema.workspace = true
kalid.workspace = true
log.workspace = true
memorable-ids.workspace = true
minijinja = { workspace = true, optional = true, features = ["custom_syntax"] }
obscura = { workspace = true, optional = true }
parking_lot.workspace = true
regex.workspace = true
reqwest.workspace = true

rmcp = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-util = { workspace = true, features = ["rt"] }
toml.workspace = true
toon-format.workspace = true
turso.workspace = true
url.workspace = true
urlencoding.workspace = true
walkdir = { workspace = true, optional = true }
wasmtime = { workspace = true, optional = true }

[[example]]
name = "faux_agent"
path = "examples/faux_agent.rs"

[[example]]
name = "basic_agent"
path = "examples/basic_agent.rs"

[[example]]
name = "agent_tools"
path = "examples/agent_tools.rs"

[[example]]
name = "agent_events"
path = "examples/agent_events.rs"

[[example]]
name = "agent_session"
path = "examples/agent_session.rs"

[[example]]
name = "agent_harness"
path = "examples/agent_harness.rs"

[[example]]
name = "agent_coding_tools"
path = "examples/agent_coding_tools.rs"
required-features = ["builtin-tools"]

[[example]]
name = "agent_web_tools"
path = "examples/agent_web_tools.rs"
required-features = ["builtin-tools"]

[[example]]
name = "agent_filesystem_tools"
path = "examples/agent_filesystem_tools.rs"
required-features = ["builtin-tools"]

[[example]]
name = "agent_search_tools"
path = "examples/agent_search_tools.rs"
required-features = ["builtin-tools"]

[[example]]
name = "agent_list_tools"
path = "examples/agent_list_tools.rs"
required-features = ["builtin-tools"]


[[example]]
name = "agent_multi_turn"
path = "examples/agent_multi_turn.rs"

[[example]]
name = "agent_hooks"
path = "examples/agent_hooks.rs"

[[example]]
name = "agent_steering"
path = "examples/agent_steering.rs"

[[example]]
name = "agent_compaction"
path = "examples/agent_compaction.rs"

[[example]]
name = "agent_coding_workflow"
path = "examples/agent_coding_workflow.rs"
required-features = ["tools-edit"]

[[example]]
name = "agent_skills"
path = "examples/agent_skills.rs"

[[example]]
name = "agent_skill_math"
path = "examples/agent_skill_math.rs"

[[example]]
name = "toon_no_tools"
path = "examples/toon_no_tools.rs"

[[example]]
name = "toon_tool_call"
path = "examples/toon_tool_call.rs"

[[example]]
name = "toon_mcp_deepwiki"
path = "examples/toon_mcp_deepwiki.rs"
required-features = ["mcp"]

[[example]]
name = "default_no_tools"
path = "examples/default_no_tools.rs"

[[example]]
name = "default_tool_call"
path = "examples/default_tool_call.rs"

[[example]]
name = "default_mcp_deepwiki"
path = "examples/default_mcp_deepwiki.rs"
required-features = ["mcp"]

[[example]]
name = "mcp_deepwiki"
path = "examples/mcp_deepwiki.rs"
required-features = ["mcp"]

[[example]]
name = "encrypt_string"
path = "examples/encrypt_string.rs"
required-features = ["mcp"]

[[example]]
name = "agent_init"
path = "examples/agent_init.rs"
required-features = ["builtin-tools"]

[[example]]
name = "agent_goals"
path = "examples/agent_goals.rs"
required-features = ["builtin-tools"]

[[example]]
name = "agent_messages"
path = "examples/agent_messages.rs"

[[example]]
name = "agent_mcp_config"
path = "examples/agent_mcp_config.rs"
required-features = ["mcp"]

[[example]]
name = "agent_compaction_full"
path = "examples/agent_compaction_full.rs"

[[example]]
name = "agent_subagent"
path = "examples/agent_subagent.rs"

[[example]]
name = "agent_collaboration"
path = "examples/agent_collaboration.rs"

[dev-dependencies]
elph-ai = { workspace = true }
elph-core = { workspace = true, features = ["tracing"] }
httpmock.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[test]]
name = "tracing_http"
path = "tests/tracing_http.rs"
required-features = ["tracing"]

[[test]]
name = "web_tools"
path = "tests/web_tools.rs"
required-features = ["tools-web"]

[[test]]
name = "plan_mode"
path = "tests/plan_mode.rs"
required-features = ["builtin-tools"]

[[test]]
name = "subagent"
path = "tests/subagent.rs"
required-features = ["builtin-tools"]

[[test]]
name = "tools_fff"
path = "tests/tools_fff.rs"
required-features = ["tools-search"]

[[test]]
name = "prompt_template"
path = "tests/prompt_template.rs"
required-features = ["prompt-templates"]

[lints.rust]
linker_messages = "allow"
