[package]
name = "elph-ai"
version = "0.0.22"
license = "MIT"
description = "Unified LLM API with provider collections, auth resolution, and streaming"
keywords = ["ai", "llm", "provider", "api", "elph"]
categories = ["api-bindings", "development-tools"]
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = true
include = ["Cargo.toml", "src/**/*", "bin/**/*", "models/**/*.json", "tests/data/**/*", "examples/**/*"]

[lib]
name = "elph_ai"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
aws-config = "1"
aws-sdk-bedrockruntime = "1"
aws-smithy-runtime-api = "1"
aws-smithy-types = "1"
axum = { workspace = true, features = ["query"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { workspace = true, features = ["derive", "env"] }
eventsource-stream = "0.2"
futures = "0.3"
futures-util = "0.3"
http = "1"
image = "0.25"
jsonschema = "0.46.10"
lazy_static = "1.5"
once_cell = "1.21"
rand = "0.10.2"
regex = "1"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
schemars = "1.2.1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2 = "0.11.0"
thiserror = "2"
tokio = { workspace = true, features = ["sync", "time", "rt-multi-thread", "macros", "net", "io-util"] }
tokio-rustls = "0.26"
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tokio-util = "0.7"
tracing = { workspace = true }
url = "2"
webpki-roots = "1.0.8"
zstd = "0.13"

[[bin]]
name = "generate-models"
path = "bin/generate_models/main.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"

[[example]]
name = "browse_models"
path = "examples/browse_models.rs"

[[example]]
name = "tool_loop"
path = "examples/tool_loop.rs"

[[example]]
name = "images"
path = "examples/images.rs"

[[example]]
name = "custom_provider"
path = "examples/custom_provider.rs"

[[example]]
name = "auth_custom"
path = "examples/auth_custom.rs"

[dev-dependencies]
async-trait = "0.1"
indicatif.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
